# DCS-metadata

./: AudioVideo_Fields.xlsx  Pipfile  README.md  pyproject.toml  test.json  test.yaml  test2.yaml  test3.yaml  test_spreadsheet.xlsx
docs/: installing_vscode.md  why_yaml.md
dwim/: config.py  model.py  probulator.py  profiles.py  project.py  qc.py  schemas.py  utils.py
dwim/models/: __init__.py  common.py  project.py  structure.py
dwim/models/media/: audiocassette.py  betacam.py  open_reel_audio.py  umatic.py
etc/: avps.yaml  dwim.yaml  profile_avps.yaml  profile_default.yaml
old_schemas/: project.json
old_schemas/media/: audiocassette-media.json  betacam-sequence.json  betacam.json  open_reel_audio-media.json  open_reel_audio-sequence.json  umatic-media.json
pydantic_schemas/src/: common.py  project.py
samples/AVPS_40000000123456/: project.yaml
samples/VAZ9999/: project.yaml
samples/VAZ9999/AVPS_400000012345675/: AVPS_40000012345675_01_pres.mkv.yaml  physical_object.yaml
schemas/: analog_sound_disc.json  audiocassette.json  betacam.json  common.json  core.json  film.json  missing.json  physical_object.json  project.json  sequence_information.json  vhs.json
schemas/media/: analog_sound_disc.json  audiocassette-media.json  audiocassette-sequence.json  betacam-media.json  common.json  open_reel_audio-media.json  open_reel_audio-sequence.json  open_reel_tape-media.json  open_reel_tape-sequence.json  umatic-sequence.json
tools/: dcs_add_physical  dcs_import_spreadsheet  dcs_project_create  schemas.py
(+2 files in other folders)
